[package]
name = "test-kernel"
version = "0.1.0"
edition = "2021"

[dependencies.ostd]
git = "https://github.com/asterinas/asterinas"
rev = "2f51106"

[dependencies]
align_ext= "0.1.0"
spin = "0.9.4"
xmas-elf = "0.8.0"
log = "0.4"
riscv = { version = "0.11.1", features = ["s-mode"] }
id-alloc = "0.1.0"
int-to-c-enum = "0.1.0"
bitflags = "1.3"
include_bytes_aligned = "0.1.4"


[workspace]
exclude = ["target/osdk/base"]
