[package]
name = "lab13-io"
version = "0.1.0"
edition = "2024"

[dependencies.ostd]
version = "0.16.1"

[dependencies]
align_ext = "0.1.0"
spin = "0.9.4"
log = "0.4"
riscv = { version = "0.11.1", features = ["s-mode"] }

id-alloc = "0.1.0"
int-to-c-enum = "0.1.0"
bitflags = "1.3"
include_bytes_aligned = "0.1.4"
xmas-elf = "0.8.0"
owo-colors = "3"
sbi-rt = "0.0.3"

[workspace]
exclude = ["target/osdk/base", "target/osdk/test-base"]
